[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Fonts/menu_font.tres" type="DynamicFont" id=1]
[ext_resource path="res://Assets/Fonts/menu_font_elements.tres" type="DynamicFont" id=2]
[ext_resource path="res://Assets/Themes/ButtonTheme.tres" type="Theme" id=3]
[ext_resource path="res://Assets/Scenes/Game.gd" type="Script" id=4]

[sub_resource type="StyleBoxFlat" id=2]
content_margin_left = 5.0
bg_color = Color( 0.247059, 0.0392157, 0.364706, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
corner_detail = 13

[sub_resource type="Theme" id=1]
LineEdit/colors/clear_button_color = Color( 0.88, 0.88, 0.88, 1 )
LineEdit/colors/clear_button_color_pressed = Color( 1, 1, 1, 1 )
LineEdit/colors/cursor_color = Color( 0.94, 0.94, 0.94, 1 )
LineEdit/colors/font_color = Color( 0.88, 0.88, 0.88, 1 )
LineEdit/colors/font_color_selected = Color( 0, 0, 0, 1 )
LineEdit/colors/font_color_uneditable = Color( 0.88, 0.88, 0.88, 0.5 )
LineEdit/colors/selection_color = Color( 0.49, 0.49, 0.49, 1 )
LineEdit/constants/minimum_spaces = 12
LineEdit/fonts/font = ExtResource( 2 )
LineEdit/icons/clear = null
LineEdit/styles/focus = null
LineEdit/styles/normal = SubResource( 2 )
LineEdit/styles/read_only = null

[node name="Game" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UI" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="UI"]
margin_right = 1366.0
margin_bottom = 768.0
color = Color( 0.160784, 0.0823529, 0.207843, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleLabel" type="Label" parent="UI"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -381.0
margin_top = 50.0
margin_right = 381.0
margin_bottom = 124.0
custom_fonts/font = ExtResource( 1 )
text = "Guess the Number!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="YourGuessLabel" type="Label" parent="UI"]
margin_left = 189.536
margin_top = 257.619
margin_right = 487.536
margin_bottom = 300.619
custom_fonts/font = ExtResource( 2 )
text = "Your guess:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HighGuessesLabel" type="Label" parent="UI"]
margin_left = 779.869
margin_top = 268.107
margin_right = 1122.87
margin_bottom = 311.107
custom_fonts/font = ExtResource( 2 )
text = "High guesses:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LowGuessesLabel" type="Label" parent="UI"]
margin_left = 788.11
margin_top = 516.076
margin_right = 1131.11
margin_bottom = 559.076
custom_fonts/font = ExtResource( 2 )
text = "Low Guesses:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnswerLabel" type="Label" parent="UI"]
margin_left = 124.352
margin_top = 502.733
margin_right = 475.352
margin_bottom = 576.733
custom_fonts/font = ExtResource( 1 )
text = "[answer]"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CorrectAnswer" type="Label" parent="UI"]
margin_left = 169.606
margin_top = 374.04
margin_right = 520.606
margin_bottom = 448.04
custom_fonts/font = ExtResource( 1 )
text = "[answer]"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LowList" type="Label" parent="UI"]
margin_left = 787.96
margin_top = 591.741
margin_right = 1187.96
margin_bottom = 691.741
custom_fonts/font = ExtResource( 2 )
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HighList" type="Label" parent="UI"]
margin_left = 771.479
margin_top = 352.012
margin_right = 1171.48
margin_bottom = 452.012
custom_fonts/font = ExtResource( 2 )
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="UI"]
margin_left = 203.945
margin_top = 356.576
margin_right = 376.945
margin_bottom = 456.576
rect_scale = Vector2( 1.2, 1 )
theme = SubResource( 1 )
custom_fonts/font = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="UI"]
margin_left = 436.007
margin_top = 385.065
margin_right = 500.007
margin_bottom = 428.065
theme = ExtResource( 3 )
custom_fonts/font = ExtResource( 2 )
text = "OK"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RestartButton" type="Button" parent="UI"]
margin_left = 216.004
margin_top = 615.177
margin_right = 413.004
margin_bottom = 658.177
theme = ExtResource( 3 )
custom_fonts/font = ExtResource( 2 )
text = "Restart"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="Button" parent="UI"]
margin_left = 1163.53
margin_top = 7.77172
margin_right = 1360.53
margin_bottom = 50.7717
theme = ExtResource( 3 )
custom_fonts/font = ExtResource( 2 )
text = "Menu"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="UI/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="UI/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="UI/BackButton" to="." method="_on_BackButton_pressed"]
